<resources>
    <string name="app_name">Introduce</string>
    <string name="signIn_id">아이디</string>
    <string name="signIn_id_et">아이디를 입력하세요.</string>
    <string name="signIn_pw">비밀번호</string>
    <string name="signIn_pw_et">비밀번호를 입력하세요.</string>
    <string name="signIn_login_btn">로그인</string>
    <string name="signIn_signup_btn">회원가입</string>
    <string name="signUp_name_tv">이름</string>
    <string name="signUp_name_et">이름을 입력하세요.</string>
    <string name="toast_msg_noinput">입력되지 않은 정보가 있습니다.</string>
    <string name="toast_msg_idErr">아이디를 확인해 주세요.</string>
    <string name="toast_msg_pwErr">비밀번호를 확인해 주세요.</string>
    <string name="login_success">로그인 성공</string>
    <string name="home_name_tv">이름 : 이가현</string>
    <string name="home_mbti_tv">MBTI : INFP</string>
    <string name="home_hobby_tv">취미 : 산책</string>
    <string name="home_close_btn">종료</string>

</resources>